# langchainDocumentAssistant

./: .gitignore  ingestion.py  pyproject.toml
